<?xml version="1.0"?>
<package format="3">
  <name>av_gps_launch</name>
  <version>1.3.0</version>
  <description>AV package to launch the Novatel GPS</description>
  <maintainer email="alex.bordallo@ed.ac.uk">Alejandro Bordallo</maintainer>
  <maintainer email="hcruzgo@ed.ac.uk">Hector Cruz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>novatel_gps_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
